# incolume.py.fastapi.crud2

./: README.md  main.py  models.py  pyproject.toml
coverage_report/: cov.xml
coverage_report/html/: d_18b18ae8588f2b69___init___py.html  d_21e47ff02fa4a5b8___init___py.html  d_418bc32b3e25d0b8___init___py.html  d_418bc32b3e25d0b8_connections_py.html  d_424d558649a4cea2___init___py.html  d_424d558649a4cea2_models_py.html  d_424d558649a4cea2_server_py.html  d_b1e69a74acee93a5___init___py.html  d_b1e69a74acee93a5_user_py.html  d_eb340b387ad34fb2___init___py.html  index.html  status.json
incolume/: __init__.py
incolume/py/: __init__.py
incolume/py/fastapi/: __init__.py
incolume/py/fastapi/crud2/: __init__.py  models.py  schemas.py  server.py
incolume/py/fastapi/crud2/data_base/: connections.py
incolume/py/fastapi/crud2/routers/: user.py
tests/: __init__.py  conftest.py  test_principal_module.py
